fix wide spacing for checkboxes in test module selector

--- a/packages/frontend/public/assets/test-support.css
+++ b/packages/frontend/public/assets/test-support.css
@@ -2,3 +2,6 @@
 #qunit-toolbar-filters label {
   font-weight: 600;
 }
+#qunit-modulefilter-dropdown-list input[type="checkbox"] {
+  min-width: auto;
+}
